# ecommerce-app

./: .example.env  .gitignore  Makefile  README.md  clear_pycache.sh  pyproject.toml
.github/workflows/: dev.yml
src/: auth.py  config.py  database.py  handlers.py  lib.py  main.py  model.py
src/database/: admin.py  db.py  order.py  product.py  user.py
src/route/: __init__.py  admin.py  order.py  product.py  user.py
src/schema/: order.py  product.py  user.py
src/service/: admin.py  order.py  product.py  user.py
